[package]
name = "vimpeg"
version = "0.1.0"
edition = "2021"
authors = [
    "Tiago Martins <tiago.tsmweb@gmail.com>",
    "Hericson dos Santos <hericson.cipol@gmail.com>",
]
license = "MPL 2.0"
description = "Extract video frames into a single image in a simple way."
homepage = "https://github.com/forensicht/vimpeg"
repository = "https://github.com/forensicht/vimpeg/"
readme = "README.md"

[workspace]
members = ["core"]

[profile.release]
strip = true
# lto = true
debug = false
debug-assertions = false

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[dependencies]
i18n-embed-fl = "0.9.1"
once_cell = "1.19.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
anyhow = "1.0.86"
num_cpus = "1.16.0"
open = "5.3.0"
toml = "0.8.19"

[dependencies.core_vimpeg]
path = "core"

[dependencies.serde]
version = "1.0.209"
features = ["derive"]

[dependencies.rust-embed]
version = "8.5.0"
features = ["debug-embed"]

[dependencies.i18n-embed]
version = "0.14.1"
features = ["fluent-system", "desktop-requester"]

[dependencies.relm4]
version = "0.9.0"
features = ["macros", "libadwaita", "gnome_44"]

[dependencies.relm4-components]
version = "0.9.1"

[dependencies.relm4-icons]
version = "0.9.0"

[dependencies.tokio]
version = "1.40.0"
features = ["time"]

[build-dependencies]
glib-build-tools = "0.20.0"
