[package]
name = "vimpeg"
version = "0.2.0"
edition = "2021"
authors = [
    "Tiago Martins <tiago.tsmweb@gmail.com>",
    "Hericson dos Santos <hericson.cipol@gmail.com>",
]
license = "MPL 2.0"
description = "Extract video frames into a single image in a simple way."
homepage = "https://github.com/forensicht/vimpeg"
repository = "https://github.com/forensicht/vimpeg/"
readme = "README.md"

[workspace]
members = ["core"]

[workspace.dependencies]
anyhow = "1.0.94"
rust-embed = { version = "8.5.0", features = ["debug-embed"] }
tokio = { version = "1.42.0", features = [
    "time",
    "rt",
    "rt-multi-thread",
    "fs",
    "io-util",
    "macros",
] }

[profile.release]
strip = true
# lto = true
debug = false
debug-assertions = false

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[dependencies]
anyhow = { workspace = true }
rust-embed = { workspace = true }
tokio = { workspace = true }
i18n-embed-fl = "0.9.3"
once_cell = "1.20.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
tracing-appender = "0.2.3"
num_cpus = "1.16.0"
open = "5.3.2"
toml = "0.8.19"

[dependencies.core_vimpeg]
path = "core"

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.i18n-embed]
version = "0.15.3"
features = ["fluent-system", "desktop-requester"]

[dependencies.relm4]
version = "0.9.1"
features = ["macros", "libadwaita", "gnome_46"]

[dependencies.relm4-components]
version = "0.9.1"

[dependencies.relm4-icons]
version = "0.9.0"

[build-dependencies]
glib-build-tools = "0.20.0"
